--- a/Mapchain/app/src/main/res/layout/main_activity.xml
+++ b/Mapchain/app/src/main/res/layout/main_activity.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:background="#d33232"
             >
 
 
@@ -26,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/person_name"
                 android:text="Квесты"
+                android:textColor="#ffffff"
                 android:layout_alignParentTop="true"
                 android:textSize="30sp"
                 />
@@ -45,6 +47,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_weight="4"
+        android:background="#ff7070"
         android:layout_height="match_parent"
         android:id="@+id/recyclerView"></android.support.v7.widget.RecyclerView>
 
